Project LandMatching {
  database_type: 'PostgreSQL'
  Note: '財稅局閒置/活化資產資料庫'
}

// 管理機關資料表(也包含私人單位)
Table agencies {
  id integer [pk, increment]
  name varchar [not null, unique] // 例如：六甲國小、財政稅務局
  note text

  indexes {
    name
  }
}

// 行政區資料表
Table districts {
  id integer [pk, increment]
  name varchar [not null, unique] // 例如：六甲區、鹽水區
  note text

  indexes {
    name
  }
}

// 主要資產資料表
Table assets {
  id integer [pk, increment]
  type varchar [not null]          // `資產種類`例如：土地、建物
  agency_id integer [ref: > agencies.id]
  district_id integer [ref: > districts.id]
  section varchar [not null]       // `地段` 例如：大丘園段、田寮段
  address text                     // 例如：錦仁區和平南街9號
  coordinates point                 // 定位座標, 使用 PostgreSQL 的 PostGIS 擴充功能
  area_coordinates polygon            // 區域座標組, 使用 PostgreSQL 的 PostGIS 擴充功能
  target_name varchar             // 標的名稱(原本只有建物資產有, 挪來這裡), 例如：歸仁市場2, 3樓
  status varchar                  // 例如：已經活化、活化中、未活化
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp

  indexes {
    type
    agency_id
    district_id
    status
  }
}

// 土地資料表
Table land_details {
  id integer [pk, increment]
  asset_id integer [ref: > assets.id]
  lot_number varchar [not null]    // 地號, 例如：80-8、81-1
  land_type varchar               // 土地種類, 例如：市有土地、國有土地
  area decimal                    // 面積(平方公尺), 例如：7826
  zone_type varchar               // 使用分區, 例如：學校用地、保護區
  land_use varchar                // 土地用途(市區的不會有), 例如：特定目的事業用地
  current_status varchar          // 現況, 例如：空置
  vacancy_rate integer            // 空置比例, 例如：100
  note text                       // 例如：六甲國小大丘分班(已裁併校)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  deleted_at timestamp

  indexes {
    asset_id
    lot_number
    zone_type
    current_status
  }
}

// 建物資料表
Table building_details {
  id integer [pk, increment]
  asset_id integer [ref: > assets.id]
  building_number varchar         // 建號, 例如：歸仁北段6932建號
  building_type varchar          // 建物種類, 例如：市有建物
  floor_area text               // 樓地板面積(平方公尺), 例如：2樓:3729.7 3樓:3426.2
  zone_type varchar               // 使用分區, 例如：市場用地、一般農業區
  land_use varchar                // 土地用途(市區的不會有), 例如：特定目的事業用地
  current_status varchar         // 現況, 例如：空置、部分空置
  vacancy_rate varchar          // 空置比例, 例如：100
  note text                     // 例如：2樓空置、3樓部分空間約400坪提供給使用
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  deleted_at timestamp

  indexes {
    asset_id
    building_number
    current_status
    zone_type
    land_use
  }
}

// 建物土地關聯表
Table building_land_details {
  id SERIAL [pk]
  asset_id INTEGER [ref: > assets.id]
  lot_number VARCHAR(20) [note: '地號']
  land_type VARCHAR(50) [note: '土地種類']  // 私有土地, 市有土地, 國有土地
  land_manager VARCHAR(50) [note: '土地管理者'] // 財稅局, 社會局
  created_at TIMESTAMP [note: '建立時間']
  updated_at TIMESTAMP [note: '更新時間']
}

// 資產使用類型資料表
Table usage_types {
  id integer [pk, increment]
  name varchar [not null, unique]  // 例如：停車場、親子育兒設施、辦公廳舍/行政空間
  note text

  indexes {
    name
  }
}

// 已活化資產與需求機關關聯表
Table activated_asset_demand_agencies {
  id integer [pk, increment]
  activated_asset_id integer [not null, ref: > activated_assets.id]  // 已活化資產ID
  agency_id integer [not null, ref: > agencies.id]                   // 需求機關ID
  created_at timestamp [not null, default: `now()`]                  // 建立時間
  updated_at timestamp [not null, default: `now()`]                  // 更新時間

  indexes {
    (activated_asset_id, agency_id) [unique]    // 確保不會重複關聯
    activated_asset_id
    agency_id
  }
}


// 已活化資產資料表
Table activated_assets {
  id integer [pk, increment]
  asset_id integer [ref: > assets.id]
  year integer [not null]         // 年度, 例如：107、108、109
  location text                   // 地點說明, asset的補充地點說明
  is_supplementary boolean        // 捕列, 是否為補列
  supplementary_year integer      // 補列年度, 例如：106、107、108
  usage_plan text                // 計畫用途, 例如：供鹽水區公所開闢停車場使用
  usage_type_id integer [ref: > usage_types.id]  // 計畫用途類別, 關聯到資產使用類型表
  land_value decimal             // 土地公告現值
  building_value decimal         // 房屋課稅現值
  benefit_value decimal          // 節流效益(元)
  is_counted boolean [not null]  // 列入計算: Y/M
  note text                     // 備註
  status varchar [not null]      // 例如：進行中、已終止 (進行中表示是活化狀態)
  start_date date [not null]     // 活化開始日期
  end_date date                  // 活化結束日期（若仍在進行中則為 null）

  indexes {
    asset_id
    year
    usage_type_id
  }
}

// 資產活化歷史紀錄表 (後期有修改的才會添加)
Table activation_history {
  id integer [pk, increment]
  asset_id integer [ref: > assets.id]
  activated_asset_id integer [ref: > activated_assets.id]
  status varchar [not null]      // 例如：啟動、終止
  change_date date [not null]    // 狀態變更日期
  reason text                    // 變更原因
  note text                      // 備註
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by integer            // 建立者ID

  indexes {
    asset_id
    activated_asset_id
    status
    change_date
  }
}



// 資產處理案件表
Table asset_cases {
  id integer [pk, increment]      // 案件編號
  asset_id integer [ref: > assets.id]  // 關聯到主要資產表
  name text [not null]               // 案件名稱, 例如：臺南市玉井游泳池
  purpose text                       // 活化目標說明, 例如：供社會局設置居家托育服務中心
  purpose_type_id integer [ref: > usage_types.id]  // 活化目標類型, 例如：運動設施、停車場
  status varchar [not null]          // 案件狀態, 例如：解除列管尚未完成活化、活化中
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp

  indexes {
    asset_id
    purpose_type_id
    status
  }
}

// 案件任務表
Table case_tasks {
  id integer [pk, increment]         // 任務序號
  case_id integer [ref: > asset_cases.id]  // 案件編號
  agency_id integer [ref: > agencies.id]  // 負責單位(執行機關)
  task_content text [not null]       // 任務內容
  status varchar [not null]          // 進度狀態, 例如：待處理、進行中、已完成
  start_date date                    // 開始執行時間
  complete_date date                 // 實際完成時間
  due_date date                      // 預期完成時間
  note text                         // 備註
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp

  indexes {
    case_id
    agency_id
    status
  }
}

// 案件會議結論表
Table case_meeting_conclusions {
  id integer [pk, increment]
  case_id integer [ref: > asset_cases.id] // 案件編號
  meeting_date date [not null]       // 會議日期
  content text [not null]            // 結論內容
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp

  indexes {
    case_id
    meeting_date
  }
}